The grid made responsive

--- a/site/components/structures/atoms/horizontal-grid.scss
+++ b/site/components/structures/atoms/horizontal-grid.scss
@@ -6,6 +6,10 @@
   article {
     flex: 4 0 0px;
 
+    @include mobile {
+      flex: 1 0 0px;
+    }
+
     // center
     display: flex;
     justify-content: center;
