--- a/site/components/structures/pages/index.html
+++ b/site/components/structures/pages/index.html
@@ -22,12 +22,12 @@
 
 
   <section id="header">
-    <h3>Header</h3>
+    <h3>design & code</h3>
   </section>
 
   <section id="content">
     <aside>
-      <h3>Title</h2>
+      <h2>Clean<br>User<br/>Interfaces</h2>
     </aside>
 
     <article>
@@ -36,7 +36,7 @@
   </section>
 
   <section id="footer">
-    <h3>Footer</h3>
+    <h3>metamn</h3>
   </section>
 
 
