Responsive images added

--- a/site/components/structures/pages/index.scss
+++ b/site/components/structures/pages/index.scss
@@ -10,6 +10,13 @@ html {
       &#content {
         @include horizontal-grid;
         @include borders;
+
+        article {
+          figure {
+            @include figure;
+            @include placeholder;
+          }
+        }
       }
     }
   }
