--- a/site/components/structures/atoms/breakpoints.scss
+++ b/site/components/structures/atoms/breakpoints.scss
@@ -7,11 +7,26 @@
 // Screens smaller than 600px
 $breakpoint-mobile: 37.5em;
 
+// Screens smaller than 1024px
+$breakpoint-tablet: 64em;
+
 
 
 
 @mixin mobile {
   @media only screen and (max-width: $breakpoint-mobile - 0.001) {
+    @content
+  }
+}
+
+@mixin tablet {
+  @media only screen and (min-width: $breakpoint-mobile) and (max-width: $breakpoint-tablet - 0.001) {
+    @content
+  }
+}
+
+@mixin tablet-and-below {
+  @media only screen and (max-width: $breakpoint-tablet - 0.001) {
     @content
   }
 }
